@@ -3,7 +3,7 @@
 //#define DISABLE_FORCE_NVIDIA_OPTIMUS // do not enable NVIDIA Optimus cards (on Laptops, etc) by default
 //#define NVAPI_DEPTH_READ // forces NVAPI to do copydepth (as officially unspecified in DX9)
 
-//#define TWOSIDED_TRANSPARENCY // transparent primitives are rendered backsided first, then frontsided
+//#define TWOSIDED_TRANSPARENCY // transparent hit targets are rendered backsided first, then frontsided
 
 #define USE_D3D9EX // if enabled can use extended API, does not benefit on XP though // currently only allows to enable adaptive vsync again (on win vista/7 only, seems to be broken in win8)
 
