@@ -1,4 +1,4 @@
-Visual Pinball 10 command Reference v0.92
+Visual Pinball 10 command Reference v0.93
 by Fuzzel
 
 This is a quick overview of all commands/variables VP knows. A lot of them do not have an effect when called from the script because they have an impact on the pre-rendering only.
@@ -7,6 +7,7 @@ Variables starting with a (*) can't be changed by the script (most can be read t
 
 Changelog:
 10.3:
+- add BackfacesEnabled to the primitive element
 - add MusicVolume and ShowFSS to the table element
 - add Damping to the gate element
 - change Friction to Damping (which was actually AntiFriction before, but never mentioned) for the spinner element (which also changes the input range from 0..100 to 0..1, and is inverse to before, e.g. "1-OldFriction/100")
@@ -568,6 +569,7 @@ Scatter(float)
                This option is useful if you have real toys or static primitives which are never hitable at all
                and are just there for the 'looks'.
 *ReflectionEnabled(bool) - default=true
+BackfacesEnabled(bool) - default=false, if enabled will also show/render the backfacing triangles (if a transparent material is used)
 
 The following only applies to mesh primitives with an animation sequence
 ------------------------------------------------------------------------
