@@ -125,7 +125,7 @@ BEGIN
     PUSHBUTTON      "&Export",IDC_EXPORT,457,116,50,14
     CONTROL         "Button1",IDC_PICTUREPREVIEW,"Button",BS_OWNERDRAW | WS_TABSTOP,352,16,101,145
     EDITTEXT        IDC_ALPHA_MASK_EDIT,459,162,40,14,ES_AUTOHSCROLL
-    LTEXT           "Alpha Mask\r\n(<= masks out) \r\n(0..255)",IDC_STATIC_ALPHA,460,135,54,25
+    LTEXT           "Alpha Mask\r\n(<= masks out)\r\n(0..255)",IDC_STATIC_ALPHA,460,135,54,25
     PUSHBUTTON      "&Update All",IDC_UPDATE_ALL_BUTTON,458,62,50,14
 END
 
@@ -1876,17 +1876,21 @@ BEGIN
     LTEXT           "RotX",IDC_STATIC,7,51,17,8
 END
 
-IDD_PROPPRIMITIVE_PHYSICS DIALOGEX 0, 0, 125, 161
+IDD_PROPPRIMITIVE_PHYSICS DIALOGEX 0, 0, 125, 180
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Has &Hit Event",34,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,2,60,10
+    LTEXT           "Physics Material",IDC_STATIC,6,24,52,8
     EDITTEXT        33,78,10,40,12,ES_AUTOHSCROLL
+    LTEXT           "Hit Threshol&d",IDC_STATIC,7,12,70,8
+    COMBOBOX        IDC_MATERIAL_COMBO4,6,34,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Overwrite Material Settings",IDC_OVERWRITE_MATERIAL_SETTINGS,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,48,100,10
     EDITTEXT        110,78,62,40,12,ES_AUTOHSCROLL
     EDITTEXT        112,78,75,40,12,ES_AUTOHSCROLL
     EDITTEXT        114,78,88,40,12,ES_AUTOHSCROLL
     EDITTEXT        115,78,101,40,12,ES_AUTOHSCROLL
-    LTEXT           "Hit Threshol&d",IDC_STATIC,7,12,70,8
     LTEXT           "&Elasticity",IDC_STATIC,7,64,63,8
     LTEXT           "Elasticity Falloff",IDC_STATIC,7,77,63,8
     LTEXT           "&Friction",IDC_STATIC,7,90,63,8
@@ -1896,10 +1900,9 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,115,10
     LTEXT           "If not a Toy, reduce polygons by (0..1)",IDC_STATIC,7,141,63,16
     EDITTEXT        IDC_COLLISION_REDUCTION_FACTOR,78,142,40,12,ES_AUTOHSCROLL
-    COMBOBOX        IDC_MATERIAL_COMBO4,6,34,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Overwrite Material Settings",IDC_OVERWRITE_MATERIAL_SETTINGS,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,48,100,10
-    LTEXT           "Physics Material",IDC_STATIC,6,24,52,8
+    CONTROL         "Render backfacing transparent",IDC_PRIMITIVE_ENABLE_BACKFACES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,161,115,10
+    LTEXT           "Triangles (slower, but accurate)",IDC_STATIC,19,171,102,9
 END
 
 IDD_PROPRUBBER_PHYSICS DIALOGEX 0, 0, 125, 131
