@@ -1,5 +1,7 @@
 VP 10.3.0 Changelog
 ------------------------
+- add additional parameter to primitives to allow for rendering backface triangles (if the used material features transparency)
+
 - material/image manager dialog is resizeable
 
 - show camera position in camera/light mode
@@ -20,7 +22,6 @@ VP 10.3.0 Changelog
 - own colors can now be defined for locked/unlocked selected elements, element fill color and editor table background, in the editor preferences
 
 - sound manager, image manager and script editor save and restore window position and size
-
 - Image Manager: new column added to show if an image is in use
 
 - add Win32++ framework to simplify UI handling (more infos under https://sourceforge.net/projects/win32-framework )
